--- a/controller/src/main/resources/messages_en.properties
+++ b/controller/src/main/resources/messages_en.properties
@@ -16,3 +16,5 @@ thisGiftCertificateDurationIsForbidden = "This gift certificate duration is forb
 checkTheValuesThatYouTransferred = "Check the parameters that you transferred!"
 thisTagLengthIsForbidden = "This tag length is forbidden!"
 thisTagNameIsForbidden = "This tag name is forbidden!"
+thisUserNameLengthIsForbidden = "This user first/last name length is forbidden!"
+thisUserNameIsForbidden = " This user first/last name is forbidden!"
