Change service logic. Add additional verification for transferred parameters

--- a/controller/src/main/resources/messages.properties
+++ b/controller/src/main/resources/messages.properties
@@ -5,16 +5,22 @@ noTagWithThatId = No tag with that id!
 cannotInsertThisTag = Cannot insert this tag!
 cannotInsertThisCertificate = Cannot insert this certificate!
 cannotInsertThisOrder = Cannot insert this order!
-cannotFindTheMostWidelyUsedUserTagWithHigherOrderCost = "Cannot find the most widely used user tag with higher order cost!"
-forbiddenTransferredToMuchParameters = "There is too much transferred parameters! You can update only 'duration' field!"
+cannotFindTheMostWidelyUsedUserTagWithHigherOrderCost = Cannot find the most widely used user tag with higher order cost!
+forbiddenTransferredToMuchParameters = There is too much transferred parameters! You can update only 'duration' field!
 userIdCannotBeNull = Transferred userId cannot be null!
-thisGiftCertificateLengthIsForbidden = "This gift certificate length is forbidden!"
-thisGiftCertificateNameIsForbidden = "This gift certificate name is forbidden!"
-thisGiftCertificateDescriptionIsTooLong = "This gift certificate description is too long!"
-thisGiftCertificatePriceIsForbidden = "This gift certificate price is forbidden!"
-thisGiftCertificateDurationIsForbidden = "This gift certificate duration is forbidden!"
-checkTheValuesThatYouTransferred = "Check the parameters that you transferred!"
-thisTagLengthIsForbidden = "This tag length is forbidden!"
-thisTagNameIsForbidden = "This tag name is forbidden!"
-thisUserNameLengthIsForbidden = "This user first/last name length is forbidden!"
-thisUserNameIsForbidden = " This user first/last name is forbidden!"
+giftCertificateLengthIsForbidden = This gift certificate name length is forbidden!
+giftCertificateDescriptionIsTooLong = This gift certificate description is too long!
+giftCertificatePriceIsForbidden = This gift certificate price is forbidden!
+giftCertificateDurationIsForbidden = This gift certificate duration is forbidden!
+checkTheValuesThatYouTransferred = Check the parameters that you transferred!
+thisTagLengthIsForbidden = This tag length is forbidden!
+thisTagNameIsForbidden = This tag name is forbidden!
+thisUserNameLengthIsForbidden = This user first/last name length is forbidden!
+thisUserNameIsForbidden =  This user first/last name is forbidden!
+giftCertificateNameCannotBeNull = The gift certificate name cannot be null!
+giftCertificatePriceCannotBeNull = The gift certificate price cannot be null!
+giftCertificateDurationCannotBeNull = The gift certificate duration cannot be null!
+tagNameCannotBeNull = The tag name cannot be null
+notUniqueTagName = Not unique tag name. Change another name!
+cannotUpdateThisTag = Cannot update this tag certificate!
+giftCertificateListCannotBeNull = List of Gift Certificates cannot be null!
