--- a/controller/src/main/resources/messages_en.properties
+++ b/controller/src/main/resources/messages_en.properties
@@ -24,3 +24,4 @@ tagNameCannotBeNull = The tag name cannot be null
 notUniqueTagName = Not unique tag name. Change another name!
 cannotUpdateThisTag = Cannot update this tag certificate!
 giftCertificateListCannotBeNull = List of Gift Certificates cannot be null!
+noTagWithThatName = No tag with that name!
