--- a/controller/src/main/resources/messages_en.properties
+++ b/controller/src/main/resources/messages_en.properties
@@ -25,3 +25,4 @@ notUniqueTagName = Not unique tag name. Change another name!
 cannotUpdateThisTag = Cannot update this tag certificate!
 giftCertificateListCannotBeNull = List of Gift Certificates cannot be null!
 noTagWithThatName = No tag with that name!
+userDoesNotHaveAnyOrders = This user does not have any orders!
