Fix getQueryWithConditions method from service layer

--- a/controller/src/main/resources/messages.properties
+++ b/controller/src/main/resources/messages.properties
@@ -26,3 +26,5 @@ cannotUpdateThisTag = Cannot update this tag certificate!
 giftCertificateListCannotBeNull = List of Gift Certificates cannot be null!
 noTagWithThatName = No tag with that name!
 userDoesNotHaveAnyOrders = This user does not have any orders!
+noGiftCertificateWithConditions = Cannot find a gift certificate by transferred conditions!
+cannotUpdateThisCertificate = Cannot update this gift certificate!
