Added OrderValidator and OrderValidatorTest

--- a/controller/src/main/resources/messages.properties
+++ b/controller/src/main/resources/messages.properties
@@ -28,3 +28,5 @@ noTagWithThatName = No tag with that name!
 userDoesNotHaveAnyOrders = This user does not have any orders!
 noGiftCertificateWithConditions = Cannot find a gift certificate by transferred conditions!
 cannotUpdateThisCertificate = Cannot update this gift certificate!
+userCannotBeNull = Users id cannot be null!
+checkTheId = Check the id!
