--- a/controller/src/main/resources/messages.properties
+++ b/controller/src/main/resources/messages.properties
@@ -8,23 +8,23 @@ cannotInsertThisOrder = Cannot insert this order!
 cannotFindTheMostWidelyUsedUserTagWithHigherOrderCost = Cannot find the most widely used user tag with higher order cost!
 forbiddenTransferredToMuchParameters = There is too much transferred parameters! You can update only 'duration' field!
 userIdCannotBeNull = Transferred userId cannot be null!
-giftCertificateLengthIsForbidden = This gift certificate name length is forbidden!
+giftCertificateLengthIsForbidden = This gift certificate login length is forbidden!
 giftCertificateDescriptionIsTooLong = This gift certificate description is too long!
 giftCertificatePriceIsForbidden = This gift certificate price is forbidden!
 giftCertificateDurationIsForbidden = This gift certificate duration is forbidden!
 checkTheValuesThatYouTransferred = Check the parameters that you transferred!
 thisTagLengthIsForbidden = This tag length is forbidden!
-thisTagNameIsForbidden = This tag name is forbidden!
-thisUserNameLengthIsForbidden = This user first/last name length is forbidden!
-thisUserNameIsForbidden =  This user first/last name is forbidden!
-giftCertificateNameCannotBeNull = The gift certificate name cannot be null!
+thisTagNameIsForbidden = This tag login is forbidden!
+thisUserNameLengthIsForbidden = This user first/last login length is forbidden!
+thisUserNameIsForbidden =  This user first/last login is forbidden!
+giftCertificateNameCannotBeNull = The gift certificate login cannot be null!
 giftCertificatePriceCannotBeNull = The gift certificate price cannot be null!
 giftCertificateDurationCannotBeNull = The gift certificate duration cannot be null!
-tagNameCannotBeNull = The tag name cannot be null
-notUniqueTagName = Not unique tag name. Change another name!
+tagNameCannotBeNull = The tag login cannot be null
+notUniqueTagName = Not unique tag login. Change another login!
 cannotUpdateThisTag = Cannot update this tag certificate!
 giftCertificateListCannotBeNull = List of Gift Certificates cannot be null!
-noTagWithThatName = No tag with that name!
+noTagWithThatName = No tag with that login!
 userDoesNotHaveAnyOrders = This user does not have any orders!
 noGiftCertificateWithConditions = Cannot find a gift certificate by transferred conditions!
 cannotUpdateThisCertificate = Cannot update this gift certificate!
