delete custom validator logic

--- a/controller/src/main/resources/messages.properties
+++ b/controller/src/main/resources/messages.properties
@@ -15,7 +15,7 @@ giftCertificateDurationIsForbidden = This gift certificate duration is forbidden
 checkTheValuesThatYouTransferred = Check the parameters that you transferred!
 thisTagLengthIsForbidden = This tag length is forbidden!
 thisTagNameIsForbidden = This tag login is forbidden!
-thisUserNameLengthIsForbidden = This user first/last login length is forbidden!
+thisUserNameLengthIsForbidden = This user login length is forbidden!
 thisUserNameIsForbidden =  This user first/last login is forbidden!
 giftCertificateNameCannotBeNull = The gift certificate login cannot be null!
 giftCertificatePriceCannotBeNull = The gift certificate price cannot be null!
