Fix bugs in code

--- a/controller/src/main/resources/messages.properties
+++ b/controller/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 noUserWithId = No user with that id!
-noGiftCertificateWithThatId = No gift certificate with that id!
+noGiftCertificateWithThatId = No gift certificate tag with that id!
 noOrderWithThatId = No order with that id!
 noTagWithThatId = No tag with that id!
 cannotInsertThisTag = Cannot insert this tag!
@@ -8,7 +8,7 @@ cannotInsertThisOrder = Cannot insert this order!
 cannotFindTheMostWidelyUsedUserTagWithHigherOrderCost = Cannot find the most widely used user tag with higher order cost!
 forbiddenTransferredToMuchParameters = There is too much transferred parameters! You can update only 'duration' field!
 userIdCannotBeNull = Transferred userId cannot be null!
-giftCertificateLengthIsForbidden = This gift certificate login length is forbidden!
+giftCertificateLengthIsForbidden = This gift certificate length is forbidden!
 giftCertificateDescriptionIsTooLong = This gift certificate description is too long!
 giftCertificatePriceIsForbidden = This gift certificate price is forbidden!
 giftCertificateDurationIsForbidden = This gift certificate duration is forbidden!
@@ -16,7 +16,7 @@ checkTheValuesThatYouTransferred = Check the parameters that you transferred!
 thisTagLengthIsForbidden = This tag length is forbidden!
 thisTagNameIsForbidden = This tag login is forbidden!
 thisUserNameLengthIsForbidden = This user login length is forbidden!
-thisUserNameIsForbidden =  This user first/last login is forbidden!
+thisUserNameIsForbidden = This user first/last login is forbidden!
 giftCertificateNameCannotBeNull = The gift certificate login cannot be null!
 giftCertificatePriceCannotBeNull = The gift certificate price cannot be null!
 giftCertificateDurationCannotBeNull = The gift certificate duration cannot be null!
