--- a/controller/src/main/resources/messages_en.properties
+++ b/controller/src/main/resources/messages_en.properties
@@ -30,3 +30,6 @@ noGiftCertificateWithConditions = Cannot find a gift certificate by transferred 
 cannotUpdateThisCertificate = Cannot update this gift certificate!
 userCannotBeNull = Users id cannot be null!
 checkTheId = Check the id!
+accessDenied = Access denied! Please, contact the administrator!
+invalidLoginOrPassword = Invalid login or password!
+somethingWrongWithToken = Check the token, that you transrerred!
