--- a/controller/src/main/resources/messages.properties
+++ b/controller/src/main/resources/messages.properties
@@ -33,3 +33,6 @@ checkTheId = Check the id!
 accessDenied = Access denied! Please, contact the administrator!
 invalidLoginOrPassword = Invalid login or password!
 somethingWrongWithToken = Check the token, that you transrerred!
+cannotBlockUser = Cannot block this user!
+cannotUnblockUser = Cannot unblock this user!
+cannotRetrieveUser = Cannot retrieve this user!
