--- a/controller/src/main/resources/messages_en.properties
+++ b/controller/src/main/resources/messages_en.properties
@@ -4,7 +4,6 @@ noOrderWithThatId = No order with that id!
 noTagWithThatId = No tag with that id!
 cannotInsertThisCertificate = Cannot insert this certificate!
 cannotFindTheMostWidelyUsedUserTagWithHigherOrderCost = Cannot find the most widely used user tag with higher order cost!
-forbiddenTransferredToMuchParameters = There is too much transferred parameters! You can update only 'duration' field!
 giftCertificateLengthIsForbidden = This gift certificate length is forbidden!
 giftCertificateDescriptionIsTooLong = This gift certificate description is too long!
 giftCertificatePriceIsForbidden = This gift certificate price is forbidden!
@@ -32,3 +31,4 @@ somethingWrongWithToken = Check the token, that you transrerred!
 cannotBlockUser = Cannot block this user!
 cannotUnblockUser = Cannot unblock this user!
 cannotRetrieveUser = Cannot retrieve this user!
+giftCertificateNameIsNotUnique = Gift certificate name is not unique! Try again!
